Bug 433081 - Global theme KCM location in the header confuses people and does not adequately communicate its parent status
Summary: Global theme KCM location in the header confuses people and does not adequate...
Status: RESOLVED FIXED
Alias: None
Product: systemsettings
Classification: Applications
Component: sidebarview (other bugs)
Version First Reported In: 5.21.0
Platform: openSUSE Linux
: VHI normal
Target Milestone: ---
Assignee: Marco Martin
URL:
Keywords: regression, usability
: 433312 433853 436183 (view as bug list)
Depends on:
Blocks:
 
Reported: 2021-02-17 15:47 UTC by tneo
Modified: 2021-04-26 09:32 UTC (History)
5 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In: 5.22
Sentry Crash Report:


Attachments
visualisation of issue (37.44 KB, image/png)
2021-02-17 15:47 UTC, tneo
Details
Appearance header empty (101.45 KB, image/png)
2021-03-01 13:33 UTC, medin
Details

Note You need to log in before you can comment on or make changes to this bug.
Description tneo 2021-02-17 15:47:11 UTC
Created attachment 135769 [details]
visualisation of issue

SUMMARY
The "Global theme" item under "Appearence" becomes the top-level menu item. While other Settings options show the title for that section e.g. "Workspace"

STEPS TO REPRODUCE
1. Open system settings full-screen
2. Navigate to appearance
3. 

OBSERVED RESULT
Global theme is the top-level menu item coloured in the header title colours. 

EXPECTED RESULT


SOFTWARE/OS VERSIONS
Operating System: openSUSE Tumbleweed 20210215
KDE Plasma Version: 5.21.0
KDE Frameworks Version: 5.78.0
Qt Version: 5.15.2
Kernel Version: 5.10.16-1-default
Graphics Platform: Wayland
Comment 1 Nate Graham 2021-02-17 19:26:34 UTC
This was an intentional change in Plasma 5.21. The idea was to show that all of the other pages are children of this page (since they are).
Comment 2 tneo 2021-02-17 21:02:13 UTC
Hmm. It is not consistent across other settings. But alas.
Comment 3 Nate Graham 2021-02-17 21:08:29 UTC
Consistency would actually be inconsistent in this case, because no other pages have both content of their own, and also child pages. The Global Themes page is presented differently because it *is* different. :)
Comment 4 Nate Graham 2021-02-22 23:38:56 UTC
*** Bug 433312 has been marked as a duplicate of this bug. ***
Comment 5 Nate Graham 2021-02-22 23:39:49 UTC
FWIW we are not super satisfied with this presentation but were unable to come up with anything better. The idea is to communicate that Global Themes is the "parent" page and all the other pages are children, without hiding the child pages and making them too inaccessible.

Suggestions are welcome.
Comment 6 Michal Kec (MiK) 2021-02-23 08:02:01 UTC
Hello Nate, thanks for linking my duplicate. However I can understand that the behavior is intentional, it has usability issues.

- Inconsistency: When I click the menu item labeled "Appearance", I expect the 2nd level caption is "Appearance". 

- Confusion: When I walk through the 2nd level menu items, I miss "Global Theme" there. I do not expect the caption to be clickable.

Making the item "Global Theme" a caption and removing it from 2nd level menu items made it IMO less visible. The previous UX worked well for me, nevertheless I respect your decision.
Comment 7 Nate Graham 2021-02-23 14:20:06 UTC
The previous UI was definitely consistent, but it failed to communicate something important: That Global Themes is a parent of all the other pages, such that changing the Global Theme will affect the value of all the other pages.

I understand that you don't think the new UI really succeeds at this, and I even kind of agree. However that just means we need to change it to something better, because we really do want to communicate  that relationship somehow in the UI.

I'll re-open this and we can discuss potential improvements or alternatives here.
Comment 8 Nate Graham 2021-02-23 14:21:21 UTC
Also this change caused us to lose clickability on the whole header text to go back, generating a bug report: Bug 433202.
Comment 9 tneo 2021-02-26 03:31:59 UTC
The label "Appearance" covers the content properly. So I don't understand the need to show-case that "global theme" relates to all sub settings. That is kind of covered by the name itself. What may help is that the header name is "Appearance" and the first item "Global Theme" with a hover explaining that changing the global theme touches all appearance related settings. Maybe a re-label to "Global Appearance" helps in clearly stating that it touches everything. 

As by nature of the settings menu it is not entirely different behaviour using the global themes, that warrants this different behaviour.
Comment 10 Nate Graham 2021-02-26 16:03:21 UTC
> So I don't understand the need to show-case that "global theme" relates to
> all sub settings
The reason is because we have users confused about this relationship. We want to communicate that changing a global theme can (and often does) change all of the child settings.

A hover tooltip won't really work because you would only see it when hovering over that entry. We generally don't use tooltips for very important information.
Comment 11 Michal Kec (MiK) 2021-02-26 16:34:15 UTC
(In reply to Nate Graham from comment #10)
> The reason is because we have users confused about this relationship. We
> want to communicate that changing a global theme can (and often does) change
> all of the child settings.

As an user I did not get such message, sorry. I just noticed "hey, the most important menu item is missing here". As I understand your intention now, the arrangement is still confusing to me.

How about a simple colorful rectangle on top of the theme-list with few words of explanation? I can see some red rectangles in systemsettings modules for touchpad or joystick. Maybe we can use these in different color?
Comment 12 Nate Graham 2021-02-26 16:35:43 UTC
Yeah, I understand that the approach we took doesn't seem to have actually worked. :)
Comment 13 medin 2021-03-01 13:32:05 UTC
In global settings it appears non consistent, see attached image.
Comment 14 medin 2021-03-01 13:33:07 UTC
Created attachment 136280 [details]
Appearance header empty
Comment 15 Nate Graham 2021-03-01 14:38:37 UTC
That's an unrelated issue: Bug 433621.
Comment 16 Nate Graham 2021-03-02 18:30:45 UTC
*** Bug 433853 has been marked as a duplicate of this bug. ***
Comment 17 Nate Graham 2021-03-02 18:31:09 UTC
Marking as VHI as we are getting a lot of user complaints about this.
Comment 18 tneo 2021-03-12 04:21:33 UTC
To add to the confusion. If you don't have system settings full-screen and click on appearance, you only have global theme as the menu is not navigating to the next level as with "workspace behaviour". You have to click appearance for a second time to move into the next level.
Comment 19 tneo 2021-03-12 04:22:52 UTC
Disregard the above. It does go down, but had a glitch (or 2).
Comment 21 Marco Martin 2021-03-23 15:26:49 UTC
Git commit 80f7c06166a095cfa144d7664951e29210e7c89c by Marco Martin.
Committed on 23/03/2021 at 15:26.
Pushed by mart into branch 'master'.

make the modules look indented

if a subcategory has a category owner module, make
them look indented to suggest they are logical
children of the category owner module
Related: bug 433202

M  +8    -1    app/SettingsBase.cpp
M  +12   -2    core/MenuItem.cpp
M  +6    -0    core/MenuItem.h
M  +13   -1    core/MenuModel.cpp
M  +4    -2    sidebar/SidebarMode.cpp
M  +38   -59   sidebar/package/contents/ui/SubCategoryPage.qml

https://invent.kde.org/plasma/systemsettings/commit/80f7c06166a095cfa144d7664951e29210e7c89c
Comment 22 David Redondo 2021-04-26 09:32:47 UTC
*** Bug 436183 has been marked as a duplicate of this bug. ***