make the modules look indented

if a subcategory has a category owner module, make
them look indented to suggest they are logical
children of the category owner module

BUG:433081
BUG:433202