sidebar/package/contents/ui/SubCategoryPage.qml
@@ -35,74 +35,53 @@ Kirigami.ScrollablePage {
             visible: false
         }
 
+        background: MouseArea {
+            acceptedButtons: applicationWindow().wideScreen ? Qt.NoButton : Qt.LeftButton
+            onClicked: root.pageStack.currentIndex = 0;
+            hoverEnabled: !Kirigami.Settings.isMobile
+            visible: !applicationWindow().wideScreen
+            Accessible.role: Accessible.Button
+            Accessible.name: i18n("Go back")
+            Rectangle {
+                anchors.fill: parent
+                color: Kirigami.Theme.highlightColor
+                opacity: parent.containsMouse ? (parent.pressed ? 0.4 : 0.2) : 0
+            }
+            QQC2.ToolTip {
+                text: parent.Accessible.name
+            }
+        }
+
         contentItem: RowLayout {
             id: toolBarLayout
             anchors.fill: parent
             spacing: 0
 
+            // NOTE: this toolbutton is needed even if is not visible in order to have good
+            // size hints for the toolbar height which should perfectly align with the toolbar on the other side
             QQC2.ToolButton {
-                id: backButton
-                visible: !applicationWindow().wideScreen
+                id: buttonSizePlaceholder
+                visible: false
                 icon.name: LayoutMirroring.enabled ? "go-previous-symbolic-rtl" : "go-previous-symbolic"
-                onClicked: root.pageStack.currentIndex = 0;
-                Accessible.role: Accessible.Button
-                Accessible.name: i18n("Go back")
-                QQC2.ToolTip {
-                    text: parent.Accessible.name
-                }
+            }
+            Kirigami.Icon {
+                source: LayoutMirroring.enabled ? "go-previous-symbolic-rtl" : "go-previous-symbolic"
+                Layout.preferredWidth: buttonSizePlaceholder.implicitWidth
+                Layout.preferredHeight: Kirigami.Units.iconSizes.smallMedium
+                Layout.alignment: Qt.AlignCenter
             }
 
-            MouseArea {
-                id: backToCategoryButton
-                implicitWidth: titleLayout.implicitWidth
-                implicitHeight: titleLayout.implicitHeight
+            Kirigami.Heading {
                 Layout.fillWidth: true
-                Layout.leftMargin: Kirigami.Units.smallSpacing
-                enabled: systemsettings.subCategoryModel.categoryOwnedByKCM
-                hoverEnabled: true
-                activeFocusOnTab: true
-                Accessible.role: Accessible.Button
-                Accessible.name: subCategoryColumn.title
-                onClicked: {
-                    focus = true;
-                    systemsettings.subCategoryModel.loadParentCategoryModule();
-                }
-                Rectangle {
-                    anchors {
-                        fill: parent
-                        leftMargin: -Kirigami.Units.smallSpacing
-                    }
-                    radius: Kirigami.Units.smallSpacing
-                    color: Kirigami.Theme.highlightColor
-                    opacity: parent.containsMouse ? (parent.pressed ? 0.4 : 0.2) : (parent.activeFocus ? 0.1 : 0)
-                    Behavior on opacity {
-                        OpacityAnimator {
-                            duration: Kirigami.Units.shortDuration
-                            easing.type: Easing.InOutQuad
-                        }
-                    }
-                }
-                RowLayout {
-                    id: titleLayout
-                    spacing: Kirigami.Units.smallSpacing
-                    Kirigami.Icon {
-                        visible: systemsettings.subCategoryModel.categoryOwnedByKCM
-                        source: systemsettings.subCategoryModel.icon
-                        implicitWidth: Kirigami.Units.iconSizes.smallMedium
-                        implicitHeight: Kirigami.Units.iconSizes.smallMedium
-                    }
-                    Kirigami.Heading {
-                        Layout.fillWidth: true
-                        Layout.fillHeight: true
-                        // Don't be too short when the back button isn't visible
-                        Layout.minimumHeight: backButton.implicitHeight
-                        level: 3
-                        text: subCategoryColumn.title
-                        verticalAlignment: Text.AlignVCenter
-                        elide: Text.ElideRight
-                    }
-                }
+                Layout.fillHeight: true
+                // Don't be too short when the back button isn't visible
+                Layout.minimumHeight: buttonSizePlaceholder.implicitHeight
+                level: 3
+                text: subCategoryColumn.title
+                verticalAlignment: Text.AlignVCenter
+                elide: Text.ElideRight
             }
+
         }
     }
     background: Rectangle {
@@ -123,6 +102,7 @@ Kirigami.ScrollablePage {
         Keys.onBacktabPressed: {
             mainColumn.focus = true;
         }
+
         onCountChanged: {
             if (count > 1 && !root.searchMode) {
                 if (root.pageStack.depth < 2) {
@@ -149,8 +129,6 @@ Kirigami.ScrollablePage {
                 if (systemsettings.activeSubCategoryRow >= 0) {
                     root.pageStack.currentIndex = 1;
                     subCategoryView.forceActiveFocus();
-                } else {
-                    backToCategoryButton.forceActiveFocus();
                 }
             }
             onIntroPageVisibleChanged: {
@@ -180,6 +158,7 @@ Kirigami.ScrollablePage {
             highlighted: systemsettings.activeSubCategoryRow == index
             Keys.onEnterPressed: clicked();
             Keys.onReturnPressed: clicked();
+            leftPadding: Kirigami.Units.smallSpacing  + (Kirigami.Units.smallSpacing  + Kirigami.Units.iconSizes.smallMedium) * (model.DepthRole - 2)
             contentItem: CategoryItem {}
         }
     }
